body-parser added (json)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Jakub Juřena",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "redis": "^2.8.0"
   }
