--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test mocha test/**/*.test.js --reporter spec"
   },
   "keywords": [
     "redis",
@@ -18,5 +18,9 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "redis": "^2.8.0"
+  },
+  "devDependencies": { 
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1"
   }
 }
