--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "NODE_ENV=test mocha test/**/*.test.js --reporter spec"
+    "test": "mocha --timeout 1000"
   },
   "keywords": [
     "redis",
@@ -19,8 +19,9 @@
     "express": "^4.16.2",
     "redis": "^2.8.0"
   },
-  "devDependencies": { 
+  "devDependencies": {
     "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "mocha": "^5.0.1"
   }
 }
