--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Jakub Juřena",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "redis": "^2.8.0"
