--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "redis-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.js",
-    "test": "mocha --timeout 1000"
-  },
-  "keywords": [
-    "redis",
-    "node.js",
-    "api"
-  ],
-  "author": "Jakub Juřena",
-  "license": "ISC",
-  "dependencies": {
-    "async": "^2.6.0",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2",
-    "redis": "^2.8.0"
-  },
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^3.0.0",
-    "mocha": "^5.0.1"
-  }
+    "name": "redis-app",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon index.js",
+        "test": "mocha --timeout 1000"
+    },
+    "keywords": ["redis", "node.js", "api"],
+    "author": "Jakub Juřena",
+    "license": "ISC",
+    "dependencies": {
+        "async": "^2.6.0",
+        "body-parser": "^1.18.2",
+        "express": "^4.16.2",
+        "redis": "^2.8.0"
+    },
+    "devDependencies": {
+        "chai": "^4.1.2",
+        "chai-http": "^3.0.0",
+        "mocha": "^5.0.1"
+    }
 }
