--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "engines": {
-        "node": "8.9.4",
+        "node": ">=8.5.0",
         "npm": "5.6.0"
     },
     "scripts": {
